// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a full image set properly 1`] = `
.c3 {
  height: 45px;
  position: relative;
  margin-left: 40px;
  text-align: right;
}

.c3 > svg {
  height: 98%;
}

.c2 {
  padding: 20px;
  width: 100%;
}

.c0 {
  position: relative;
  width: 100%;
}

.c1 {
  position: absolute;
  bottom: 20px;
  left: 20px;
  min-height: 50px;
  width: auto;
  max-width: calc(100% - 80px);
  border-radius: 2px;
  background: rgba(255,255,255,0.8);
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
  cursor: pointer;
}

.c1:hover {
  background: rgba(0,0,0,0.6);
  color: white;
}

.c1:hover path,
.c1:hover polygon {
  fill: white;
}

.c4 {
  height: auto;
  width: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <div
      className="c2 sc-ifAKCX dkHxIs"
    >
      <div
        className="sc-ifAKCX hUUMqO"
      >
        <div
          className="sc-bZQynM bOrPFB sc-EHOje hUyOIs"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize={
            Array [
              "16px",
              "18px",
            ]
          }
        >
          The Work of Bruce M. Sherman
        </div>
        <div
          className="sc-ifAKCX htzdbN"
        >
          <div
            className="sc-bZQynM bOrPFB sc-EHOje cXxEpa"
            fontFamily={
              Object {
                "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                "fontWeight": 500,
              }
            }
            fontSize={
              Array [
                "12px",
                "14px",
              ]
            }
          >
            View Slideshow
          </div>
          <div
            className="sc-bZQynM bOrPFB sc-EHOje couLSF"
            fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
            fontSize={
              Array [
                "12px",
                "14px",
              ]
            }
          >
            3 Images
          </div>
        </div>
      </div>
      <div
        className="rrm-container rrm-greaterThanOrEqual-sm"
      >
        <div
          className="c3"
        >
          <svg
            className="image-set"
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
              fill="black"
              transform="translate(-6728.67 -507.72)"
            />
            <polygon
              fill="black"
              points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
            />
            <polygon
              fill="black"
              points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <img
      alt="The Work of Bruce M. Sherman"
      className="c4"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=800&quality=80"
    />
  </div>
</div>
`;

exports[`renders a mini image set properly 1`] = `
.c5 {
  height: 45px;
  position: relative;
  margin-left: 40px;
  text-align: right;
}

.c5 > svg {
  height: 98%;
}

.c4 {
  padding: 20px;
  width: 100%;
}

.c0 {
  position: relative;
  width: 100%;
}

.c3 {
  height: auto;
  width: 100%;
}

.c1 {
  height: 100px;
  padding: 10px 0 10px 10px;
  border: 1px solid #E5E5E5;
  cursor: pointer;
}

.c1 .c2 {
  height: 100%;
  width: auto;
}

<div
  className="c0"
>
  <div
    className="c1 sc-ifAKCX byxejl"
    onClick={[Function]}
  >
    <img
      alt="The Work of Bruce M. Sherman"
      className="c2 c3"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F0aRUvnVgQKbQk5dj8xcCAg%2Flarger.jpg&width=200&quality=80"
    />
    <div
      className="c4 sc-ifAKCX dkHxIs"
    >
      <div
        className="sc-ifAKCX hUUMqO"
      >
        <div
          className="sc-bZQynM bOrPFB sc-EHOje hUyOIs"
          fontFamily={
            Object {
              "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
              "fontWeight": 500,
            }
          }
          fontSize={
            Array [
              "16px",
              "18px",
            ]
          }
        >
          The Work of Bruce M. Sherman
        </div>
        <div
          className="sc-ifAKCX htzdbN"
        >
          <div
            className="sc-bZQynM bOrPFB sc-EHOje cXxEpa"
            fontFamily={
              Object {
                "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                "fontWeight": 500,
              }
            }
            fontSize={
              Array [
                "12px",
                "14px",
              ]
            }
          >
            View Slideshow
          </div>
          <div
            className="sc-bZQynM bOrPFB sc-EHOje couLSF"
            fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
            fontSize={
              Array [
                "12px",
                "14px",
              ]
            }
          >
            3 Images
          </div>
        </div>
      </div>
      <div
        className="rrm-container rrm-greaterThanOrEqual-sm"
      >
        <div
          className="c5"
        >
          <svg
            className="image-set"
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
              fill="black"
              transform="translate(-6728.67 -507.72)"
            />
            <polygon
              fill="black"
              points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
            />
            <polygon
              fill="black"
              points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
